refactor: perform various code cleanup